--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,12 +13,12 @@ builds:
     targets:
       - darwin_amd64
       - darwin_arm64
-      - linux_386
+      # - linux_386
       - linux_amd64
       - linux_amd64_v3
-      - linux_arm_5
-      - linux_arm_6
-      - linux_arm_7
+      # - linux_arm_5
+      # - linux_arm_6
+      # - linux_arm_7
       - linux_arm64
       - linux_mips_softfloat
       - linux_mips_hardfloat
@@ -28,9 +28,9 @@ builds:
       - linux_mips64le
       - linux_s390x
       - linux_riscv64
-      - freebsd_386
-      - freebsd_amd64
-      - windows_386
+      # - freebsd_386
+      # - freebsd_amd64
+      # - windows_386
       - windows_amd64
       - windows_amd64_v3
       - windows_arm64
@@ -39,23 +39,22 @@ archives:
   - format: tar.gz
     # use zip for windows archives
     format_overrides:
-    - goos: windows
-      format: zip
+      - goos: windows
+        format: zip
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
 
 release:
   prerelease: auto
   mode: keep-existing
-
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
