--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,8 +11,8 @@ builds:
       - CGO_ENABLED=0
     main: ./cmd/gost
     targets:
-      - darwin_amd64
-      - darwin_arm64
+      # - darwin_amd64
+      # - darwin_arm64
       # - linux_386
       - linux_amd64
       - linux_amd64_v3
