--- a/.github/workflows/trigger-nightly.yml
+++ b/.github/workflows/trigger-nightly.yml
@@ -1,9 +1,9 @@
 name: Trigger nightly build
 
 on:
-  schedule:
+  # schedule:
     # * is a special character in YAML, so you have to quote this string
-    - cron:  '30 15 * * *'
+    # - cron:  '30 15 * * *'
   workflow_dispatch:
 
 jobs:
