--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -43,7 +43,8 @@ jobs:
 
     - name: Set up Docker Buildx
       id: buildx
-      uses: docker/setup-buildx-action@v3
+      # docker/setup-buildx-action@v3.9.0
+      uses: docker/setup-buildx-action@f7ce87c1d6bead3e36075b2ce75da1f6cc28aaca
 
     - name: Environment
       run: |
@@ -57,13 +58,15 @@ jobs:
 
     - name: Login to DockerHub
       if: github.event_name != 'pull_request'
-      uses: docker/login-action@v3
+      # docker/login-action@v3.4.0
+      uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Buildx and push
-      uses: docker/build-push-action@v6
+      # docker/build-push-action@v6.9.0
+      uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75
       with:
         platforms: ${{ steps.prepare.outputs.docker_platforms }}
         push: true
